Blender Save As 'negative' filename button hitbox overlaps 'positive' button, which leads to User data loss #83935

Closed
opened 2020-12-18 19:47:36 +01:00 by Khaled · 11 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 760/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.91

Blender Version
Broken: version: 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: 0f45cab862
Worked: 2.90.1 release

Short description of error
When using Save As '+' button for the next file name, often times the '-' button is clicked instead. The influence of the '-' button is too wide that it extends to the '+' button

- is yellow, + is red. Note that the - hitbox even covers the first 1-2 pixels of the + icon.

Hitboxes.png

Exact steps for others to reproduce the error

  • Files -> Save As
  • Hover over the '+' Button in the right of filename field, slowly move the mouse to the left. Sooner than expected, you will find yourself hovering over the '-' sign instead.

This unfortunately makes users lose older version of the file as it re-writes on them by the easy mis-click on the '-' button.

Please see attached video for further proof.
Blender2.91_save_video_20201218-204041.rar

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 760/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.91 **Blender Version** Broken: version: 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: `0f45cab862` Worked: 2.90.1 release **Short description of error** When using Save As '+' button for the next file name, often times the '-' button is clicked instead. The influence of the '-' button is too wide that it extends to the '+' button `-` is yellow, `+` is red. Note that the `-` hitbox even covers the first 1-2 pixels of the `+` icon. ![Hitboxes.png](https://archive.blender.org/developer/F9519538/Hitboxes.png) **Exact steps for others to reproduce the error** - Files -> Save As - Hover over the '+' Button in the right of filename field, slowly move the mouse to the left. Sooner than expected, you will find yourself hovering over the '-' sign instead. This unfortunately makes users lose older version of the file as it re-writes on them by the easy mis-click on the '-' button. Please see attached video for further proof. [Blender2.91_save_video_20201218-204041.rar](https://archive.blender.org/developer/F9516666/Blender2.91_save_video_20201218-204041.rar)
Author

Added subscriber: @kwagdy

Added subscriber: @kwagdy

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

The area in which the button becomes active does indeed not seem to be centered around the icon nor symmetrical. I will confirm this for now, but it might be that the UI team would triage this differently.

The area in which the button becomes active does indeed not seem to be centered around the icon nor symmetrical. I will confirm this for now, but it might be that the UI team would triage this differently.
Evan Wilson changed title from Blender Save As 'negative' filename button too close to 'positive' button to Blender Save As 'negative' filename button hitbox overlaps 'positive' button 2020-12-20 17:03:57 +01:00
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

Setting this to High as it is:

  1. A recent breakage.
  2. This bug violates "The User's data is sacred."
  3. Has a patch.
Setting this to High as it is: 1. A recent breakage. 2. This bug violates "The User's data is sacred." 3. Has a patch.
Evan Wilson changed title from Blender Save As 'negative' filename button hitbox overlaps 'positive' button to Blender Save As 'negative' filename button hitbox overlaps 'positive' button, which leads to User data loss 2020-12-20 17:32:30 +01:00
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Not high priority issue in my opinion. There is mouse hover feedback now, so you can see which icon is in focus. And after clicking it, the entire text box is red if you risk overriding data. And we are only talking about la 1-2 pixels problem.
Also note that "The User's data is sacred." is not an existing UI paradigm. If it were, the UI would have to be much more paranoid to prevent possible user mistakes - to the point of being very annoying. Of course there are typical mistakes that we can and should prevent.

Not high priority issue in my opinion. There is mouse hover feedback now, so you can see which icon is in focus. And after clicking it, the entire text box is red if you risk overriding data. And we are only talking about la 1-2 pixels problem. Also note that "The User's data is sacred." is not an existing UI paradigm. If it were, the UI would have to be much more paranoid to prevent possible user mistakes - to the point of being very annoying. Of course there are typical mistakes that we can and should prevent.

This issue was referenced by 3726aa68c3

This issue was referenced by 3726aa68c35d91aa6065d197aecdc3ee36a1b38f

This issue was referenced by 6f054f5ac7

This issue was referenced by 6f054f5ac73a1a6bff434efb1e15aea40c2e0647
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2021-01-28 12:35:22 +01:00
Thomas Dinges added this to the 2.92 milestone 2023-02-08 16:15:37 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83935
No description provided.